css & class changed (gdpr)

--- a/login.html
+++ b/login.html
@@ -88,7 +88,7 @@
 				</section>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Accepter</button>
+					<button type="button" class="btn btn-gdpr" data-bs-dismiss="modal">Accepter</button>
 				</div>
 				</div>
 			</div>
